[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anvio-ext-tools"
version = "0.1.0"
description = "Minimal Anvio-style external tool wrappers demo"
authors = [
    {name = "Andrea Telatin", email = "andreatelatin@gmail.com"}
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/telatin/anvio-ext-tools"
Repository = "https://github.com/telatin/anvio-ext-tools"

[project.scripts]
anvio-tools-demo = "anvio_tools.cli.anvio_tools_demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anvio_tools*"]
